Various Java cleanups (#122)
Signed-off-by: Mickael Maison <mickael.maison@gmail.com>